--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
 
     <string name="requestfail">연결에 실패하였습니다.</string>
     <string name="logout_content">로그아웃시 다시 회원가입을 해야 합니다.</string>
+    <string name="rentaldetail_alert1">본 서비스는 고정 가격 매물이므로 입찰과정없이 예약 완료 됩니다.</string>
+    <string name="rentaldetail_alert2">(예약 후 취소가 불가능 하니 신중한 결정 부탁 드립니다.)</string>
 </resources>
